# fantasy_api

./: pyproject.toml
fantasy_api/: main.py
tests/: test_fantasy_api.py
