[tool.poetry]
name = "fantasy_api"
version = "0.1.0"
description = ""
authors = ["Gavin Heath <Gheath201@gmail.com>"]

[tool.poetry.scripts]
start = "fantasy_api.main:start"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.73.0"
uvicorn = "^0.17.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
